--- a/minimal-notebook/requirements.txt
+++ b/minimal-notebook/requirements.txt
@@ -1,7 +1,13 @@
-notebook==5.7.8
+# Install mod_wsgi for use in optional webdav support.
+mod_wsgi==4.6.7
+
+# Install supervisord for managing multiple applications.
+supervisor==4.0.4
+
+# Install base packages needed for running Jupyter Notebooks.
 jupyterhub==0.9.6;python_version>"2.7"
-jupyterlab==0.35.6;python_version>"2.7"
+jupyterlab==1.0.*;python_version>"2.7"
+notebook
 jupyter_kernel_gateway==2.3.0
-dask==1.2.2
-distributed==1.28.1
-tornado<6.0.0
+dask<3
+distributed<3
